# key_value_stores

btree/: btree.c  btree_header.c  btree_header.h  btree_insert.c  btree_test.c  btree_traverse.c  cscope.out  db_blocklist.h  db_blocks.c  db_blocks.h  db_cache.c  db_header.c  db_header.h  db_lock.h  db_utils.c  hashtable.h
gdbm/: test_gdbm.c
gdbm/gdbm-1.10/: Makefile.in  aclocal.m4  autoconf.h.in  configure
gdbm/gdbm-1.10/compat/: Makefile.in
gdbm/gdbm-1.10/doc/: Makefile.in  gdbm.texinfo  version.texi
gdbm/gdbm-1.10/export/: Makefile.in
gdbm/gdbm-1.10/po/: LINGUAS  de.po  fi.po  gdbm.pot  ja.po  pl.po  uk.po
gdbm/gdbm-1.10/src/: Makefile.in  version.c
gnupdate_db/gnupdate/: .cvsignore  Makefile.am  addpackage.c  get_all_packages.c  get_dependencies.c  get_files.c  gnupdate.c  gnupdate.h  removepackage.c  search.c  search_by_file.c  search_by_group.c  search_by_name.c  search_by_provides.c  search_by_requires.c  tags.h  utils.c
gnupdate_db/gnupdate/db/: .cvsignore  Makefile.am  btree.h  btree_delete.c  btree_lock.c  btree_lock.h  btree_node.c  btree_node.h  btree_search.c  db.c  db.h  db_blocklist.c  db_cache.h  db_internal.h  db_lock.c  db_types.h  db_utils.h  hashtable.c  offsetlist.c  offsetlist.h
leveldb/leveldb-1.12.0/: config_leveldb  cscope.files  cscope.out  leveldb-sample  leveldb-sample.c  tags
qdbm-1.8.78/: test_qdbm.c
qdbm-1.8.78/qdbm-1.8.78/: cbcodec  cbtest  config.status  crmgr  crtest  crtsv  dpmgr  dptest  dptsv  hvmgr  hvtest  libqdbm.so.14.14.0  odidx  odmgr  odtest  qmttest  rlmgr  rltest  vlmgr  vltest  vltsv
snappy/snappy-1.1.1/: Makefile  config.status  libtool  snappy_unittest
sqlite/sqlite-autoconf-3080300/: Makefile  config.status  libtool  sqlite3  sqlite3.pc
(+147 files in other folders)
